# notebooklm-py-diet-mcp

./: .gitattributes  .gitignore  INSTRUCTIONS.md  README.md  notebooklm_mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: assessment.md  setup.md
templates/: slide_styles.md
tests/: conftest.py  test_helpers.py  test_lifespan.py  test_mcp_protocol.py  test_sdk_contracts.py  test_tools.py
