[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "notebooklm-py-mcp"
version = "1.0.0"
description = "MCP server exposing Google NotebookLM as tools for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = []
keywords = ["mcp", "notebooklm", "ai", "cursor", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "notebooklm-py[browser]>=0.3.2",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
notebooklm-mcp = "notebooklm_mcp_server:mcp.run"

[project.urls]
Repository = "https://github.com/earlyprototype/notebooklm-py-MCP"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["notebooklm_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
